@@ -32,12 +32,10 @@ themeFile = default-io.theme
 #
 # deleteFlag - Flag given to users when they are deleted.
 # msgWindow  - ioFTPD's message window name (not used, yet).
-# rootPath   - Path to the ioFTPD directory.
 #
 [IoFtpd]
 deleteFlag = 6
 msgWindow  = ioFTPD::MessageWindow
-rootPath   = E:/ioFTPD/
 
 #### Commands
 #
